--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 
 
 /* 기본 레이아웃 */
+* {
+  margin: 0;
+}
+
 body{
     background-color: #F6F6F6;
     display: flex;
@@ -50,13 +54,6 @@ body{
     color: black;
   }
   
-  /* .MyButton_positive {
-    background-color: rgb(249, 238, 255);
-    border: 2px solid rgb(89, 83, 83);
-    border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
-  } */
-
-
   /*  Header  */
 header {
     padding: 20px 0px;
@@ -148,6 +145,7 @@ header {
     display: flex;
 }
 
+
 .DiaryItem .date_subject_wrapper { 
     border-right: 2px solid rgb(89, 83, 83);
     border-radius: 0% 0% 3% 15% / 0% 0% 20% 2%;
@@ -180,6 +178,11 @@ header {
 
 .DiaryItem .diary_subject img {
     width: 60%;
+    cursor: pointer;
+}
+
+.DiaryItem .diary_subject img:hover{
+  transform: rotate(-5deg);
 }
 
 .DiaryItem .contents_wrapper {
@@ -289,9 +292,9 @@ header {
 
 .Dropdown li:first-child {
     padding: 10px 20px 5px 20px;
-     background-color: #e2e2e2;
-     border-top-left-radius: 8px;
-     border-top-right-radius: 8px;
+    background-color: #e2e2e2;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 .Dropdown li:last-child{
@@ -302,6 +305,94 @@ header {
     border-bottom-right-radius: 8px;
 }
 
+
+/* Diary */
+
+.Diary .diary_header_wrapper {
+  display: flex;
+  flex-direction: column;
+
+  position: relative;
+}
+
+.Diary .diary_drop {
+  position: absolute;
+  right: 50px;
+  top: 30px;
+}
+
+.Diary .diary_content_wrapper { 
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Diary .diary_fisrt_line {
+  width: 90%;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.Diary .diary_fisrt_line img {
+  margin-right: 20px;
+}
+
+.Diary .achivement {
+  font-size: 20px;
+  width: 70%;
+  height: 50px;
+  background-color: rgb(194, 255, 109);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Diary .diary_second_line {
+  width: 90%;
+  box-sizing: border-box;
+
+  margin-top: 20px;
+}
+
+.Diary .diary_goal_area{
+  width: 90%;
+  margin-top: 20px;
+  padding: 0px 20px 20px 20px ;
+  box-sizing: border-box;
+
+  overflow: auto;
+}
+
+.Diary .diary_goal_item{
+  padding: 5px;
+  height: 30px;
+  font-size: 18px;
+  
+  display: flex;
+  align-items: center;
+}
+
+.Diary .diary_goal_item > span:first-child {
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.Diary .diary_content_area {
+  width: 90%;
+  min-height: 300px;
+  padding: 20px;
+  margin-top: 20px;
+
+  font-size: 18px;
+
+
+  background-color: #ffffff;
+  border: 2px solid rgb(89, 83, 83);
+  border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
+}
 
 
 @media (min-width:650px) {
