--- a/src/App.css
+++ b/src/App.css
@@ -395,6 +395,87 @@ header {
 }
 
 
+/* Dairy Editor */
+.DiaryEditor .editor_wrapper {
+  margin-top: 30px;
+  padding: 0px 10px;
+  font-size: 18px;
+}
+
+.DiaryEditor .editor_date_subject { 
+  display: flex;
+  flex-direction: column;
+}
+
+.DiaryEditor .editor_date_subject > div:first-child { 
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.DiaryEditor .editor_date_subject input { 
+  border: none;
+  background-color: transparent;
+  width: 70%;
+  font-family: 'Gaegu', cursive;
+}
+
+.DiaryEditor .editor_subject_wrapper {
+  margin-top: 30px;
+  width: 60%;
+  display: flex;
+  align-items: center;
+}
+
+.DiaryEditor .editor_subject_item { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 30px;
+}
+
+.DiaryEditor .editor_subject_item > span {
+  margin-top: 10px;
+}
+
+.DiaryEditor .editor_subject_item img{ 
+  width: 40px;
+}
+
+.DiaryEditor .editor_goals {
+  margin-top: 30px;
+}
+
+.DiaryEditor .editor_contents_area { 
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+}
+
+.DiaryEditor .editor_contents_area > textarea {
+  min-height: 300px;
+  margin-top: 15px;
+  padding: 20px;
+  border: 2px solid rgb(89, 83, 83);
+  border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
+}
+
+.DiaryEditor .editor_buttons {
+  margin-top: 50px;
+}
+
+
+.MyButton_editor_plus {
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+
+
+/* 미디어쿼리 */
+
 @media (min-width:650px) {
   .App {
     width: 640px;
