--- a/src/App.css
+++ b/src/App.css
@@ -446,6 +446,18 @@ header {
   margin-top: 30px;
 }
 
+.DiaryEditor .editor_goals > div:nth-child(1) { 
+  display: flex;
+  height: 50px;
+  align-items: center;
+}
+
+.DiaryEditor .editor_goals button { 
+  font-size: 25px;
+  margin-left: 10px;
+
+}
+
 .DiaryEditor .editor_contents_area { 
   margin-top: 80px;
   display: flex;
@@ -460,9 +472,24 @@ header {
   border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
 }
 
-.DiaryEditor .editor_buttons {
-  margin-top: 50px;
+
+.DiaryEditor .editor_contents_area > textarea:focus{ 
+  outline: none;
 }
+
+.DiaryEditor .editor_buttons {
+  margin-top: 30px;
+  text-align: end;
+}
+
+.DiaryEditor .editor_buttons button:first-child { 
+  color: #ff6b72;
+} 
+
+.DiaryEditor .editor_buttons button:last-child { 
+  margin-left: 10px;
+}
+
 
 
 .MyButton_editor_plus {
