--- a/src/App.css
+++ b/src/App.css
@@ -418,6 +418,7 @@ header {
   background-color: transparent;
   width: 70%;
   font-family: 'Gaegu', cursive;
+  font-size: 18px;
 }
 
 .DiaryEditor .editor_subject_wrapper {
@@ -431,11 +432,21 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 30px;
+  margin-left: 20px;
+  padding: 5px;
+  width: 50px;
+  cursor: pointer;
+}
+
+.DiaryEditor .editor_subject_item_true {
+  background-color: white;
+  border: 1.5px solid rgb(89, 83, 83);
+  border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
 }
 
 .DiaryEditor .editor_subject_item > span {
   margin-top: 10px;
+  font-size: 15px;
 }
 
 .DiaryEditor .editor_subject_item img{ 
@@ -455,7 +466,34 @@ header {
 .DiaryEditor .editor_goals button { 
   font-size: 25px;
   margin-left: 10px;
+}
 
+.DiaryEditor .editor_goals_area li {
+  margin-bottom: 10px;
+  width: 40%;
+
+  display: flex;
+}
+
+.DiaryEditor .editor_goals_area li button { 
+  font-size: 16px;
+}
+
+.DiaryEditor .editor_goals_area input { 
+  width: 100%;
+  height: 30px;
+
+  font-size: 16px;
+  font-family: 'Gaegu', cursive;
+  
+  background-color: transparent;
+  border: none;
+  border-bottom: 1.5px solid rgb(89, 83, 83);
+  border-radius: 0% 0% 30% 10% / 0% 0% 10% 5%;
+}
+
+.DiaryEditor .editor_goals_area input:focus{ 
+  outline: none;
 }
 
 .DiaryEditor .editor_contents_area { 
@@ -469,7 +507,9 @@ header {
   margin-top: 15px;
   padding: 20px;
   border: 2px solid rgb(89, 83, 83);
-  border-radius: 12% 16% 15% 15% / 2% 1% 2% 2%;
+  border-radius: 12% 16% 10% 10% / 2% 1% 2% 1%;
+  font-family: 'Gaegu', cursive;
+  font-size: 18px;
 }
 
 
@@ -490,14 +530,6 @@ header {
   margin-left: 10px;
 }
 
-
-
-.MyButton_editor_plus {
-  background-color: transparent;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-}
 
 
 
